--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -26,14 +26,14 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       actions: read
-      contents: read
+      contents: write
       security-events: write
 
     strategy:
       fail-fast: false
       matrix:
         language: [  ]
-        # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby' ]
+        # CodeQL supports ['html','csharp', 'go', 'java', 'javascript', 'python']
         # Learn more about CodeQL language support at https://git.io/codeql-language-support
 
     steps:
